    If you self-destructed for example, then re-entered, you could
    still see the destruct confirmation message in the prompt area. 

  - add the ability to zoom in/out during playback of a previously
    recorded game.

  - fix issue where in SR scan, but zoomed all the way out, you could
    see ships that you can't really see.  


8.2b (devel) 06/04/2007

  - 8.2b devel release

  - fix bug that prevented timed effects from being triggered for
    delayms (if specified in the soundrc file) after the game started.
 
  - disable allocation of a depth buffer.  We aren't using it,
    so... Might help those with 16bpp displays.

  - added sound effect for torp alerts.

  - fixed up configure so that it won't barf if sdl-config or other
    SDL checks fail.  If that happens, sound support will just be
    disabled. 

    Also fixed some problems that prevented the GL client from being
    built when sound support was not available.  Sorry about that.

  - add capability of specifying named texture rectangles (texareas)
    as part of a texture definition into CQI.  This makes it possible
    to define the element positions of the 2 decals used in the hud in
    the texturesrc file, rather than hardcoding all that crap into
    updateIconHudGeo().  Simplified alot of the hud computations,
    especially in updateIconHudGeo().

    Simplified scale/gauge drawing considerably.  No more stupid stuff
    in there anymore I hope :)

    Added the new item rectangles to the various team decal1 and
    decal2 texture definitions in texturesrc.  Knock yourself out Cat
    :)

    Moved the torp status pips to the right of the icon ship, next
    to the phaser charge status gauge.

  - new hud decal1 and decal2 textures are provided.  These have been
    modified to contain all of the relevant decal data, so there is
    no more seperate fuel gauge and fuel number rendering, for
    example.  The number boxes are contained within the decal textures